--- a/LibraryProject/Views/Shared/_Layout.cshtml
+++ b/LibraryProject/Views/Shared/_Layout.cshtml
@@ -21,9 +21,11 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Create", "Home")</li>
+                    <li>@Html.ActionLink("Create", "Create", "Home")</li>
                     <li>@Html.ActionLink("Show Library", "List", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
