--- a/LibraryProject/Views/Home/List.cshtml
+++ b/LibraryProject/Views/Home/List.cshtml
@@ -16,11 +16,10 @@
         <thead>
             <tr>
 
-                <td> Publish Date  </td>
+               
                 <td> Book Name </td>
-                <td> Writer </td>
-                
-                <td> # </td>
+             
+                <td>  </td>
 
             </tr>
         </thead>
@@ -32,11 +31,13 @@
             @foreach (var item in Model)
             {
                 <tr class="active">
-                    <td>@item.PublishDate</td>
-                    <td>@item.BookName</td>
-                    <td>@item.Writer</td>
                     
-                    <td>#</td>
+                   
+                    <td>@item.BookName</td>
+                    
+                    
+                    <td>@Html.ActionLink("Detail", "Detail", new { id = item.BookID }) @Html.ActionLink("Delete", "Delete", new { id=item.BookID }) </td>
+                   
                 </tr>
             }
 
